--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 		<div id="container">
 		</div>
 			
-		<script src="js/script.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/public/main.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
