- Remove compass + add autoprefixer * cleanup

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-		<link rel="stylesheet" href="css/styles.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="public/css/styles.css" type="text/css" media="screen">
 	</head>
 
 	<body>
 
 		<div id="container">
+
 		</div>
 			
-		<script src="js/public/main.js" type="text/javascript" charset="utf-8"></script>
+		<script src="public/js/main.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
