--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7]> <html class="ie ie6 lte9 lte8 lte7"> <![endif]-->
+<!--[if IE 7]> <html class="ie ie7 lte9 lte8 lte7"> <![endif]-->
+<!--[if IE 8]> <html class="ie ie8 lte9 lte8"> <![endif]-->
+<!--[if IE 9]> <html class="ie ie9 lte9"> <![endif]-->
+<!--[if IE 10]> <html class="ie ie10 "> <![endif]-->
+<!--[if gt IE 10]> <html> <![endif]-->
+<!--[if !IE]><!--><html class="no-js" lang="en"><!--<![endif]-->
+
 	<head>
-		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-		<link rel="stylesheet" href="public/css/styles.css" type="text/css" media="screen">
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta http-equiv="content-type" content="text/html;charset=utf-8">
+	 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes" />
+		<meta http-equiv="content-language" content="de">
+		<meta name="description" content="">
+		<title>Project</title>
+
+		<link rel='stylesheet' id='styles-css' href='public/css/styles.css' type='text/css' media='screen' />
 	</head>
-
+	
 	<body>
-
-		<div id="container">
-
-		</div>
+	
+		<div class="container">
 			
-		<script src="public/js/main.js" type="text/javascript" charset="utf-8"></script>
+		</div>
+		
+		<script type='text/javascript' src='public/js/scripts.js'></script>
 	</body>
 </html>
